...
                                        .fontStyle,
                                  ),
                              indicatorColor:
                                  FlutterFlowTheme.of(context).manualWhite,
                              tabs: [
                                Tab(
                                  key: ValueKey('signupTab_sl4o'),
                                  text: 'Signup',
                                ),
                                Tab(
                                  key: ValueKey('loginTab_1j6a'),
                                  text: 'LogIn',
                                ),
                              ],
                              controller: _model.tabBarController,
                              onTap: (i) async {
                                [() async {}, () async {}][i]();
...
                                    child: Column(
                                      mainAxisSize: MainAxisSize.max,
                                      children: [
                                        Container(
                                          width: 280.0,
                                          child: TextFormField(
                                            key: ValueKey('email-Signup_26iu'),
                                            controller: _model
                                                .emailSignupTextController,
                                            focusNode:
                                                _model.emailSignupFocusNode,
                                            autofocus: false,
                                            obscureText: false,
...
                                          ),
                                        ),
                                        Container(
                                          width: 280.0,
                                          child: TextFormField(
                                            key: ValueKey(
                                                'password-Signup_yvyh'),
                                            controller: _model
                                                .passwordSignupTextController,
                                            focusNode:
                                                _model.passwordSignupFocusNode,
                                            autofocus: false,
                                            obscureText: !_model
...
                                          ),
                                        ),
                                        Container(
                                          width: 280.0,
                                          child: TextFormField(
                                            key: ValueKey(
                                                'confPassword-Signup_w3hx'),
                                            controller: _model
                                                .confPasswordSignupTextController,
                                            focusNode: _model
                                                .confPasswordSignupFocusNode,
                                            autofocus: false,
                                            obscureText: !_model
...
                                  child: Column(
                                    mainAxisSize: MainAxisSize.max,
                                    children: [
                                      Container(
                                        width: 280.0,
                                        child: TextFormField(
                                          key: ValueKey('email-login_ah1c'),
                                          controller:
                                              _model.emailLoginTextController,
                                          focusNode: _model.emailLoginFocusNode,
                                          autofocus: false,
                                          obscureText: false,
                                          decoration: InputDecoration(
...
                                              .asValidator(context),
                                        ),
                                      ),
                                      Container(
                                        width: 280.0,
                                        child: TextFormField(
                                          key: ValueKey('password-login_4la7'),
                                          controller: _model
                                              .passwordLoginTextController,
                                          focusNode:
                                              _model.passwordLoginFocusNode,
                                          autofocus: false,
                                          obscureText:
...
                    Stack(
                      children: [
                        if (_model.tabBarCurrentIndex == 0)
                          Align(
                            alignment: AlignmentDirectional(0.0, 0.0),
                            child: FFButtonWidget(
                              key: ValueKey('signupButton'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'HOME_PAGE_PAGE_signupButton_ON_TAP');
                                logFirebaseEvent('signupButton_validate_form');
                                if (_model.formKey.currentState == null ||
                                    !_model.formKey.currentState!.validate()) {
...
                            ),
                          ),
                        if (_model.tabBarCurrentIndex == 1)
                          Align(
                            alignment: AlignmentDirectional(0.0, 0.0),
                            child: FFButtonWidget(
                              key: ValueKey('loginButton_8uea'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'HOME_PAGE_PAGE_loginButton_ON_TAP');
                                logFirebaseEvent('loginButton_auth');
                                GoRouter.of(context).prepareAuthEvent();

...
