...
                          child: Column(
                            mainAxisSize: MainAxisSize.max,
                            children: [
                              if (currentUserDisplayName != '')
                                AuthUserStreamWidget(
                                  builder: (context) => Text(
                                    key: ValueKey('Text_edit'),
                                    'Hi ${currentUserDisplayName}!',
                                    style: FlutterFlowTheme.of(context)
                                        .bodyMedium
                                        .override(
                                          fontFamily: 'Radio Canada Big',
                                          color: FlutterFlowTheme.of(context)
...
                                          padding:
                                              EdgeInsetsDirectional.fromSTEB(
                                                  12.0, 0.0, 0.0, 0.0),
                                          child: Container(
                                            width: double.infinity,
                                            child: TextFormField(
                                              key: ValueKey('TextField_zfe2'),
                                              controller: _model.textController,
                                              focusNode:
                                                  _model.textFieldFocusNode,
                                              autofocus: false,
                                              obscureText: false,
                                              decoration: InputDecoration(
...
                                            AlignmentDirectional(0.75, 1.0),
                                        child: Padding(
                                          padding:
                                              EdgeInsetsDirectional.fromSTEB(
                                                  0.0, 0.0, 12.0, 12.0),
                                          child: FFButtonWidget(
                                            key: ValueKey('Button_zcl7'),
                                            onPressed: () async {
                                              logFirebaseEvent(
                                                  'HOMESCREEN_PAGE__BTN_ON_TAP');
                                              logFirebaseEvent(
                                                  'Button_update_page_state');
                                              _model.recommendationList = [];
...
                                        return Padding(
                                          padding:
                                              EdgeInsetsDirectional.fromSTEB(
                                                  12.0, 0.0, 12.0, 0.0),
                                          child: Container(
                                            key: ValueKey(
                                                'recommendationDisplay_s39s'),
                                            child: RecommendationDisplayWidget(
                                              key: Key(
                                                  'Keyvbu_${recommendationsIndex}_of_${recommendations.length}'),
                                              recommendation:
                                                  recommendationsItem,
                                            ),
...
                      Align(
                        alignment: AlignmentDirectional(0.0, 1.0),
                        child: wrapWithModel(
                          model: _model.navBarWithMiddleButtonModel,
                          updateCallback: () => safeSetState(() {}),
                          child: NavBarWithMiddleButtonWidget(
                            key: ValueKey('NavBarWithMiddleButton_qcyi'),
                          ),
                        ),
                      ),
                    ].divide(SizedBox(height: 12.0)),
                  ),
                ),
...
