...
                              letterSpacing: 0.0,
                            ),
                      ),
                      Container(
                        width: 280.0,
                        child: TextFormField(
                          key: ValueKey('TextField_dmzt'),
                          controller: _model.textController,
                          focusNode: _model.textFieldFocusNode,
                          autofocus: false,
                          obscureText: false,
                          decoration: InputDecoration(
                            isDense: true,
...
                              .asValidator(context),
                        ),
                      ),
                    ].divide(SizedBox(height: 24.0)),
                  ),
                  FFButtonWidget(
                    key: ValueKey('Button_sm66'),
                    onPressed: () async {
                      logFirebaseEvent('PROFILE_PAGE_SAVE_PROFILE_BTN_ON_TAP');
                      logFirebaseEvent('Button_backend_call');

                      await currentUserReference!.update(createUsersRecordData(
                        displayName: _model.textController.text,
...
